[gd_scene load_steps=6 format=2]

[ext_resource path="res://chapter_theme.tres" type="Theme" id=1]
[ext_resource path="res://main_theme.tres" type="Theme" id=2]
[ext_resource path="res://menus/start_menu.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/JosefinSlab_Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
extra_spacing_char = 1
font_data = ExtResource( 4 )

[node name="StartMenu" type="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 24.0
margin_right = -26.0
margin_bottom = -23.0
theme = ExtResource( 2 )
popup_exclusive = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_right = 24.0
margin_bottom = 33.0

[node name="Panel" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 0.712
margin_bottom = 0.359985
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Title"]
margin_left = 34.0
margin_top = 201.0
margin_right = 1194.0
margin_bottom = 278.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "a ghost told by a story"
align = 1
valign = 1

[node name="Buttons" type="CenterContainer" parent="."]
anchor_top = 0.707
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.0400085
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Buttons"]
margin_left = 564.0
margin_top = 39.0
margin_right = 664.0
margin_bottom = 157.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8

[node name="NewGameButton" type="Button" parent="Buttons/VBoxContainer"]
margin_right = 100.0
margin_bottom = 34.0
shortcut_in_tooltip = false
text = "New"

[node name="ContinueButton" type="Button" parent="Buttons/VBoxContainer"]
margin_top = 42.0
margin_right = 100.0
margin_bottom = 76.0
disabled = true
shortcut_in_tooltip = false
text = "Load"

[node name="QuitButton" type="Button" parent="Buttons/VBoxContainer"]
margin_top = 84.0
margin_right = 100.0
margin_bottom = 118.0
shortcut_in_tooltip = false
text = "Quit"

[node name="MusicAttr" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -736.0
margin_top = -24.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Music: \"Moonlight Reprise\" by Kai Engel"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Buttons/VBoxContainer/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
